--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 	box-sizing: border-box;
+  background-color: #02010F;
+  color: #fff;
 }
 
 .header {
@@ -86,7 +88,7 @@
 
 .list_card {
     width: 100%;
-    margin: 25px auto;
+    margin: 45px auto;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -100,7 +102,7 @@
     display: flex;
     flex-direction: column;
     text-align: start;
-    margin-right: 45px;
+    margin-right: 65px;
     transition: .4s;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -127,17 +129,18 @@
 
 .card_car_add:hover {
     transition: .4s;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
+    box-shadow: rgb(255, 0, 234) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  }
 
 .card_car:hover {
     transition: .4s;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
+    box-shadow: rgb(255, 0, 234) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  }
 
 .image_car {
     width: 100%;
     height: auto;
+    border-radius: 15px ;
 }
 
 .image_car img{
@@ -165,4 +168,191 @@ a {
     flex-direction: column;
     font-weight: 300;
     font-size: 16px;
+}
+
+.incorrect_input {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 18px;
+  color: #00E6F6;
+  margin: 25px auto 0px;
+  display: none;
+}
+
+/*-----------------------------------------------------------------------------
+                        Login page                                          */
+.login_body {
+    background-color: #02010F;
+}
+                        .login_zone {
+    background-color: #02010F;
+    width: 100%;
+    height: 100%;
+    padding: 45px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#registration_error_v2 {
+  display: block;
+}
+
+.login_zone img {
+
+    
+}
+
+.classic_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 25px auto;
+    padding: 25px;
+}
+
+.classic_form input {
+    margin-bottom: 25px;
+}
+
+.button-49,
+.button-49:after {
+  width: 95px;
+  height: 46px;
+  line-height: 48px;
+  font-size: 16px;
+  margin: 0 auto;
+  font-family: 'Bebas Neue', sans-serif;
+  background: linear-gradient(45deg, transparent 5%, #FE2BF6 5%);
+  border: 0;
+  color: #fff;
+  letter-spacing: 3px;
+  box-shadow: 6px 0px 0px #00E6F6;
+  outline: transparent;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-49:after {
+  --slice-0: inset(50% 50% 50% 50%);
+  --slice-1: inset(80% -6px 0 0);
+  --slice-2: inset(50% -6px 30% 0);
+  --slice-3: inset(10% -6px 85% 0);
+  --slice-4: inset(40% -6px 43% 0);
+  --slice-5: inset(80% -6px 5% 0);
+  
+  content: 'ALTERNATE TEXT';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(45deg, transparent 3%, #00E6F6 3%, #00E6F6 5%, #FF013C 5%);
+  text-shadow: -3px -3px 0px #F8F005, 3px 3px 0px #00E6F6;
+  clip-path: var(--slice-0);
+}
+
+.button-49:hover:after {
+
+  animation: 1s glitch;
+  animation-timing-function: steps(2, end);
+}
+
+.button-49:hover {
+  cursor: pointer;
+}
+
+@keyframes glitch {
+  0% {
+    clip-path: var(--slice-1);
+    transform: translate(-20px, -10px);
+  }
+  10% {
+    clip-path: var(--slice-3);
+    transform: translate(10px, 10px);
+  }
+  20% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 10px);
+  }
+  30% {
+    clip-path: var(--slice-3);
+    transform: translate(0px, 5px);
+  }
+  40% {
+    clip-path: var(--slice-2);
+    transform: translate(-5px, 0px);
+  }
+  50% {
+    clip-path: var(--slice-3);
+    transform: translate(5px, 0px);
+  }
+  60% {
+    clip-path: var(--slice-4);
+    transform: translate(5px, 10px);
+  }
+  70% {
+    clip-path: var(--slice-2);
+    transform: translate(-10px, 10px);
+  }
+  80% {
+    clip-path: var(--slice-5);
+    transform: translate(20px, -10px);
+  }
+  90% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 0px);
+  }
+  100% {
+    clip-path: var(--slice-1);
+    transform: translate(0);
+  }
+}
+
+@media (min-width: 768px) {
+  .button-49,
+  .button-49:after {
+    margin: 0 auto;
+    width: 90px;
+    height: 46px;
+    line-height: 44px;
+  }
+}
+
+#large_logo {
+    width: 200px;
+    height: auto;
+}
+
+.sign_up_href {
+    font-family: 'Nanum Gothic', sans-serif;
+    color: #00E6F6;
+    font-size: 14px;
+    transition: .2s;
+}
+
+.sign_up_href:hover {
+    opacity: .5;
+    transition: .2s;
+}
+
+/* ----------------------------------------------------------------------------
+                      Registration page                                   */
+
+#registration_button {
+  width: 250px;
+  text-align: center;
+  margin-top: 25px;
+}
+
+
+/* ----------------------------------------------------------------------------
+                      Profile user page                                   */
+
+
+.hello_user {
+  margin: 25px auto;
 }
