--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -102,7 +102,7 @@
     display: flex;
     flex-direction: column;
     text-align: start;
-    margin-right: 65px;
+    margin: 15px 25px;
     transition: .4s;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -116,7 +116,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-right: 45px;
+    margin: 15px 25px;
     height: 350px;
     transition: .4s;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -139,7 +139,7 @@
 
 .image_car {
     width: 100%;
-    height: auto;
+    height: 150px;
     border-radius: 15px ;
 }
 
@@ -354,5 +354,32 @@ a {
 
 
 .hello_user {
+  margin: 25px auto;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background-color: transparent;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: .2s;
+  border: none;
+}
+
+input[type=file]::file-selector-button:hover {
+  opacity: .4;
+  transition: .4s;
+}
+
+select {
+  margin: 15px 0px;
+  border-radius: 5px;
+  height: 25px;
+}
+
+#your_car_zone {
   margin: 25px auto;
 }
