--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -132,14 +132,14 @@
     box-shadow: rgb(255, 0, 234) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   }
 
-.card_car:hover {
+.card_car:active {
     transition: .4s;
     box-shadow: rgb(255, 0, 234) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   }
 
 .image_car {
     width: 100%;
-    height: 150px;
+    height: 50%;
     border-radius: 15px ;
 }
 
@@ -157,8 +157,8 @@ a {
 }
 
 .title_car {
-    font-weight: 700;
-    font-size: 18px;
+    font-weight: 400;
+    font-size: 16px;
     margin: 8px 16px;
 }
 
@@ -382,4 +382,57 @@ select {
 
 #your_car_zone {
   margin: 25px auto;
+}
+
+
+/*-----------------------------------------------
+                        car page            */
+.car_page_zone {
+  width: 75%;
+  margin: 0 auto;
+  padding: 45px;
+  display: flex;
+  flex-direction: column;
+}    
+
+.header_car_zone {
+  width: 100%;
+  height: auto;
+  padding: 15px 45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.images_car_zone {
+  width: 100%;
+  height: auto;
+  display: flex;
+  margin: 20px auto;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+
+.description_car_zone {
+  width: 100%;
+  height: auto;
+  margin: 15px auto;
+  padding: 45px;
+  text-align: start;
+  font-family: 'Nanum Gothic', sans-serif;
+  font-size: 18px;
+}
+
+#info_about_car_detail {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  text-align: start;
+  padding: 0 45px;
+}
+
+#add_car_button {
+  width: 200px;
+  margin: 20px auto 0px;
 }
